Fixes to the styles.

--- a/qropper.html
+++ b/qropper.html
@@ -4,24 +4,24 @@
   <meta charset="utf-8" />
   <title>Image Resizer & Cropper</title>
   <style>
-    body { background:#0b1020; color:#e8ebff; font-family:sans-serif; margin:0; }
-    header { padding:1em; background:#121931; }
+    body { background:#000; color:#ddd; font-family:sans-serif; margin:0; }
+    header { padding:1em; background: #121931; }
     header h1 { margin:0; font-size:1.2em; }
-    main { display:flex; gap:20px; padding:20px; }
-    .controls { flex:0 0 300px; background:#121931; padding:15px; border-radius:10px; }
+    main { display:flex; gap:5px; padding:20px; }
+    .controls { flex:0 0 300px; background:#121931; padding:15px; border-radius:0px; }
     .controls h2 { margin-top:0; font-size:1em; }
     .controls label { font-size:0.8em; display:block; margin-top:10px; }
     .controls input[type="text"],
     .controls input[type="number"],
     .controls input[type="url"],
     .controls input[type="color"] {
-      width:100%; margin-top:4px; padding:6px; border-radius:6px; border:1px solid #2a3570;
+      width:100%; margin-top:4px; padding:6px; border-radius:0px; border:1px solid #2a3570;
       background:#0e1430; color:#e8ebff;
     }
-    .controls button { margin-top:10px; padding:8px 12px; border:none; border-radius:6px;
+    .controls button { margin-top:10px; padding:8px 12px; border:none; border-radius:0px;
       cursor:pointer; font-weight:bold; background:#6aa8ff; color:#071327; }
     .controls button.ghost { background:transparent; color:#e8ebff; border:1px solid #2a3570; }
-    #canvas { background:#000; border:1px solid #1b2552; border-radius:10px; max-width:100%; }
+    #canvas { background:#000; border:1px solid #1b2552; border-radius:0px; max-width:100%; }
     #cropControls { display:none; margin-top:10px; }
   </style>
 </head>
